--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -1,14 +1,26 @@
-<p id="notice"><%= notice %></p>
+<h1>Seasons</h1>
 
-<p>
-  <strong>Title:</strong>
-  <%= @show.title %>
-</p>
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Dir path</th>
+      <th>Belongs to</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
-<p>
-  <strong>Dir path:</strong>
-  <%= @show.dir_path %>
-</p>
+  <tbody>
+    <% @seasons.each do |season| %>
+      <tr>
+        <td><%= season.title %></td>
+        <td><%= season.dir_path %></td>
+        <td><%= link_to 'Show', season %></td>
+        <td><%= link_to 'Edit', edit_season_path(season) %></td>
+        <td><%= link_to 'Destroy', season, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
-<%= link_to 'Edit', edit_show_path(@show) %> |
-<%= link_to 'Back', shows_path %>
+<br>
