--- a/app/views/videos/show.html.slim
+++ b/app/views/videos/show.html.slim
@@ -4,8 +4,7 @@ h2 = @video.title
 div class="grid grid-rows-5 lg:grid-cols-4 sm:grid-cols-1"
     div class="row-span-5 lg:col-span-3"
         video[width="100%" height="100%" controls]
-            source[src="#{@video.file_path}" type="video/mp4"]
-            你的浏览器不支持播放
+            source[src="#{@video.file_path}"]
     div class="row-span-5 border border-teal-900"
       p
         | This line is on the left margin.
