--- a/app/views/shows/index.html.erb
+++ b/app/views/shows/index.html.erb
@@ -27,3 +27,8 @@
 <br>
 
 <%= link_to 'New Show', new_show_path %>
+<div data-controller="show">
+  <button data-action="click->show#scan" class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
+    Scan Shows
+  </button>
+</div>
